add a new exercice file

--- a/Movie recommandation-Exercise_1.ipynb
+++ b/Movie recommandation-Exercise_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -31,12 +31,14 @@
     "        # - 2: Features extraction\n",
     "        # - 3: Model implementation: The Naive approach\n",
     "        # - 4: Model implementation: The Collaborative Filtering approach\n",
-    "        # - 5: Predict Films for yourself !"
+    "        # - 5: Predict Films for yourself !\n",
+    "        \n",
+    "# Have a look at pySpark API: http://spark.apache.org/docs/latest/programming-guide.html#transformations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -82,22 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "487650"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# Count Lines in each RDD\n",
@@ -106,44 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3883"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rawMovies.<FILL IN> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'1::1193::5::978300760'"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Each line in the ratings dataset (ratings.dat.gz) is formatted as: UserID::MovieID::Rating::Timestamp\n",
     "# Each line in the movies dataset (movies.dat) is formatted as: MovieID::Title::Genres\n",
@@ -156,29 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u\"1::Toy Story (1995)::Animation|Children's|Comedy\""
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rawMovies.<FILL IN>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -219,22 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, u'Toy Story (1995)'), (2, u'Jumanji (1995)')]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the 2 first lines of each RDD\n",
     "moviesRDD.take(2)"
@@ -242,29 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 1193, 5.0), (1, 914, 3.0)]"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ratingsRDD.take(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -324,20 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "movieNameWithAvgRatingsRDD: [(3.6818181818181817, u'Happiest Millionaire, The (1967)', 22), (3.0468227424749164, u'Grumpier Old Men (1995)', 299), (2.882978723404255, u'Hocus Pocus (1993)', 94)]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# 3- Use 'moviesRDD` to get the movie names for `movieIDsWithAvgRatingsRDD` and create tuples of the form :\n",
@@ -370,19 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Movies with highest ratings: [(4.5349264705882355, u'Shawshank Redemption, The (1994)', 1088), (4.515798462852263, u\"Schindler's List (1993)\", 1171), (4.512893982808023, u'Godfather, The (1972)', 1047), (4.510460251046025, u'Raiders of the Lost Ark (1981)', 1195), (4.505415162454874, u'Usual Suspects, The (1995)', 831), (4.457256461232604, u'Rear Window (1954)', 503), (4.45468509984639, u'Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1963)', 651), (4.43953006219765, u'Star Wars: Episode IV - A New Hope (1977)', 1447), (4.4, u'Sixth Sense, The (1999)', 1110), (4.394285714285714, u'North by Northwest (1959)', 700), (4.379506641366224, u'Citizen Kane (1941)', 527), (4.375, u'Casablanca (1942)', 776), (4.363975155279503, u'Godfather: Part II, The (1974)', 805), (4.358816276202219, u\"One Flew Over the Cuckoo's Nest (1975)\", 811), (4.358173076923077, u'Silence of the Lambs, The (1991)', 1248), (4.335826477187734, u'Saving Private Ryan (1998)', 1337), (4.326241134751773, u'Chinatown (1974)', 564), (4.325383304940375, u'Life Is Beautiful (La Vita \\ufffd bella) (1997)', 587), (4.324110671936759, u'Monty Python and the Holy Grail (1974)', 759), (4.3096, u'Matrix, The (1999)', 1250)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "movieLimitedAndSortedByRatingRDD = (movieNameWithAvgRatingsRDD\n",
@@ -394,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -420,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -438,23 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training: 292716, validation: 96902, test: 98032\n",
-      "\n",
-      "[(1, 914, 3.0), (1, 2355, 5.0), (1, 595, 5.0)]\n",
-      "[(1, 1287, 5.0), (1, 594, 4.0), (1, 1270, 5.0)]\n",
-      "[(1, 1193, 5.0), (1, 2398, 4.0), (1, 1035, 5.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainingRDD, validationRDD, testRDD = ratingsRDD.randomSplit([6, 2, 2], seed=0L)\n",
     "\n",
@@ -468,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -497,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -539,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -550,22 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For rank 4 the RMSE is 0.892734779484\n",
-      "For rank 8 the RMSE is 0.890121292255\n",
-      "For rank 12 the RMSE is 0.890216118367\n",
-      "The best model was trained with rank 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "from pyspark.mllib.recommendation import ALS\n",
@@ -600,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -615,19 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model had a RMSE on the test set of 0.891048561304\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# train a model, using the trainingRDD, bestRank from previous part\n",
@@ -643,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -665,30 +553,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Most rated movies:\n",
-      "(average rating, movie name, number of reviews)\n",
-      "(4.5349264705882355, u'Shawshank Redemption, The (1994)', 1088)\n",
-      "(4.515798462852263, u\"Schindler's List (1993)\", 1171)\n",
-      "(4.512893982808023, u'Godfather, The (1972)', 1047)\n",
-      "(4.510460251046025, u'Raiders of the Lost Ark (1981)', 1195)\n",
-      "(4.505415162454874, u'Usual Suspects, The (1995)', 831)\n",
-      "(4.457256461232604, u'Rear Window (1954)', 503)\n",
-      "(4.45468509984639, u'Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1963)', 651)\n",
-      "(4.43953006219765, u'Star Wars: Episode IV - A New Hope (1977)', 1447)\n",
-      "(4.4, u'Sixth Sense, The (1999)', 1110)\n",
-      "(4.394285714285714, u'North by Northwest (1959)', 700)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5.1: Choose your movies:\n",
     "# To help you provide ratings for yourself, we have included the following code to list the names and movie IDs \n",
@@ -719,19 +588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My movie ratings: [(0, 845, 5.0), (0, 789, 4.5), (0, 983, 4.8), (0, 551, 2.0), (0, 1039, 2.0), (0, 651, 5.0), (0, 1195, 4.0), (0, 1110, 5.0), (0, 1250, 4.5), (0, 1083, 4.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
@@ -752,19 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The training dataset now has 10 more entries than the original training dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# 5.3 - Add Your Movies to Training Dataset\n",
@@ -777,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -791,19 +644,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model had a RMSE on the test set of 0.892023318284\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5.5- Check RMSE for the New Model with Your Ratings\n",
     "\n",
@@ -814,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -825,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -853,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -864,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -876,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -889,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -903,29 +748,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My highest rated movies as predicted (for movies with more than 75 reviews):\n",
-      "(5.4299985540073505, u\"Schindler's List (1993)\", 1171)\n",
-      "(5.389042745541575, u'Seven Samurai (The Magnificent Seven) (Shichinin no samurai) (1954)', 278)\n",
-      "(5.319737851915011, u'Star Wars: Episode IV - A New Hope (1977)', 1447)\n",
-      "(5.283147682824893, u'Raiders of the Lost Ark (1981)', 1195)\n",
-      "(5.264062498059267, u'Maltese Falcon, The (1941)', 476)\n",
-      "(5.2621775168721765, u'Raiders of the Lost Ark (1981)', 1195)\n",
-      "(5.245178209712927, u'Seven Samurai (The Magnificent Seven) (Shichinin no samurai) (1954)', 278)\n",
-      "(5.239504672800167, u'Shawshank Redemption, The (1994)', 1088)\n",
-      "(5.236705087447951, u'Seven Samurai (The Magnificent Seven) (Shichinin no samurai) (1954)', 278)\n",
-      "(5.233844809344983, u'Fargo (1996)', 1218)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictedHighestRatedMovies = ratingsWithNamesRDD.takeOrdered(10, key=lambda x: -x[0])\n",
     "print ('My highest rated movies as predicted (for movies with more than 75 reviews):\\n%s' %\n",
