add one line code

--- a/LogisticRegression-Exercise.ipynb
+++ b/LogisticRegression-Exercise.ipynb
@@ -43,7 +43,7 @@
     "if os.path.isfile(fileName):\n",
     "    rawData = (sc\n",
     "               .textFile(fileName, 2)\n",
-    "               .map(lambda x: x.replace('\\t', ',')))  # work with either ',' or '\\t' separated data\n",
+    "               .map(lambda x: x.replace('\\t', ',')))# work with either ',' or '\\t' separated data\n",
     "    print rawData.take(1)"
    ]
   },
@@ -98,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "#Fist we should get a RDD containing a list of (featureID,value) from the raw training data\n",
+    "#Fist we should get a RDD of a list of (featureID,value) from the raw training data\n",
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "def parseData(data):\n",
     "    \"\"\"Converts a comma separated string into a list of (featureID, value) tuples.\n",
@@ -132,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create an OHE dictionary from the RDD with the list of (featureID, value)\n",
+    "# Create an OHE dictionary from the RDD of the list of (featureID, value)\n",
     "# generated in the previous function "
    ]
   },
@@ -167,6 +167,8 @@
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "def createOneHotDictionary(inputData):\n",
     "    \"\"\"Creates a one-hot-encoder dictionary based on the input data.\n",
+    "    \n",
+    "    Hint : function zipWithIndex can be useful\n",
     "\n",
     "    Args:\n",
     "        inputData (RDD of lists of (int, str)): An RDD of observations where each observation is\n",
@@ -184,6 +186,8 @@
     "    return OHEDictionary\n",
     "\n",
     "OHEDictionary = createOneHotDictionary(parsedTrainFeat)\n",
+    "print OHEDictionary.items()[0]\n",
+    "\n",
     "numCtrOHEFeats = len(OHEDictionary.keys())\n",
     "print numCtrOHEFeats"
    ]
@@ -217,7 +221,9 @@
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "def oneHotEncoding(parsedFeats, OHEDictionary):\n",
-    "    \"\"\"Produce a 1-of-k encoding from a list of features and an 1-of-k dictionary.\n",
+    "    \"\"\"Produce a OneHot encoding from \n",
+    "         1- a list of features parsed from raw data\n",
+    "         2- an OneHot dictionary.\n",
     "\n",
     "    Note:\n",
     "        You should ensure that the indices used to create a SparseVector are sorted.\n",
