add one line code

--- a/LogisticRegression-Exercise.ipynb
+++ b/LogisticRegression-Exercise.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "source": [
     "#### ** Creating ONE Dictionary**\n",
-    "#### Generating a dictionary containing a list of \"distinct (featureID, value) : Unique Integer\" from the raw training data. We will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features)."
+    "#### Generating a dictionary containing a list of \"distinct (featureID, value) : Unique Integer\" from the raw training data. We will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features). Note : In our exercise, on apply the OneHot Encoding on all the features."
    ]
   },
   {
