add a new version of execice

--- a/Movie recommandation-Exercise1.ipynb
+++ b/Movie recommandation-Exercise1.ipynb
@@ -171,8 +171,8 @@
     "    return int(items[0]), items[1]\n",
     "\n",
     "\n",
-    "ratingsRDD = rawRatings.map(get_ratings_tuple).cache()\n",
-    "moviesRDD = rawMovies.map(get_movie_tuple).cache()"
+    "ratingsRDD = rawRatings.<FILL IN>\n",
+    "moviesRDD = rawMovies.<FILL IN>"
    ]
   },
   {
@@ -219,7 +219,7 @@
    },
    "outputs": [],
    "source": [
-    "# Approach: Recommend movies with the highest average rating and at least films having 500 reviews."
+    "# Approach: Recommend movies with the highest average rating and films having at least 500 reviews."
    ]
   },
   {
@@ -233,8 +233,9 @@
     "# 1- From ratingsRDD, Create an RDD that contiens Tuples with a movieID and all Its associated ratings\n",
     "## map: (UserID, MovieID, Rating)--> (MovieID, [Rating])\n",
     "## reduce: [(MovieID, [Rating1]),(MovieID, [Rating2])] --> [(MovieID, [Rating1, Rating2])]\n",
+    "## use Lambda expression!\n",
     "movieIDsWithRatingsRDD = (ratingsRDD\n",
-    "                          .map(lambda(user_id, movie_id, rating):(movie_id,[rating]))\n",
+    "                          .map(<FILL IN>)\n",
     "                          .reduceByKey(lambda a,b: a+b))        "
    ]
   },
@@ -249,6 +250,7 @@
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# 2- Create a function that calculate the avearge rating and return a tuple (MovieID, (number of ratings, averageRating))\n",
     "## IN: (MovieID, [Rating1, Rating2])--> OUT: (MovieID, (number of ratings, averageRating))\n",
+    "# Make a transformation on movieIDsWithRatingsRDD !\n",
     "\n",
     "def getCountsAndAverages (RatingsTuple):\n",
     "    <FILL IN>\n",
@@ -396,10 +398,11 @@
     "# 4.2 Root Mean Square Error (RMSE):\n",
     "\n",
     "# In the next part, you will generate a few different models, and will need a way to decide which model is best. \n",
-    "# We will use the Root Mean Square Error (RMSE) or Root Mean Square Deviation (RMSD) to compute the error of each model. \n",
+    "# We will use the Root Mean Square Error (RMSE) to compute the error of each model. \n",
     "## RMSE is a frequently used measure of the differences between values (sample and population values) predicted by a model \n",
     "## or an estimator and the values actually observed. \n",
-    "## RMSD represents the sample standard deviation of the differences between predicted values and observed values. "
+    "## RMSD represents the sample standard deviation of the differences between predicted values and observed values. \n",
+    "## The smaller the better !!"
    ]
   },
   {
@@ -410,7 +413,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Replace <FILL IN> with appropriate code\n",
     "import math\n",
     "\n",
     "def computeError(predictedRDD, actualRDD):\n",
@@ -423,15 +425,15 @@
     "        RSME (float): computed RSME value\n",
     "    \"\"\"\n",
     "    # Transform predictedRDD into the tuples of the form ((UserID, MovieID), Rating)\n",
-    "    predictedReformattedRDD = (predictedRDD.<FILL IN>) \n",
+    "    predictedReformattedRDD = (predictedRDD.map(lambda (UserID, MovieID, Rating): ((UserID,MovieID), Rating))) \n",
     "\n",
     "    # Transform actualRDD into the tuples of the form ((UserID, MovieID), Rating)\n",
-    "    actualReformattedRDD = (actualRDD.<FILL IN>) \n",
+    "    actualReformattedRDD = (actualRDD.map(lambda (UserID, MovieID, Rating): ((UserID,MovieID), Rating))) \n",
     "\n",
     "    # Compute the squared error for each matching entry (i.e., the same (User ID, Movie ID) in each\n",
     "    # RDD) in the reformatted RDDs using RDD transformtions - do not use collect()\n",
     "    squaredErrorsRDD = (predictedReformattedRDD\n",
-    "                        .<FILL IN>\n",
+    "                        .join (actualReformattedRDD)\n",
     "                        .map (lambda (k,(a,b)):math.pow((a-b),2)))\n",
     "\n",
     "    # Compute the total squared error - do not use collect()\n",
@@ -441,7 +443,7 @@
     "    numRatings = squaredErrorsRDD.count()\n",
     "\n",
     "    # Using the total squared error and the number of entries, compute the RSME\n",
-    "    return <FILL IN>"
+    "    return math.sqrt(float(totalError)/numRatings)"
    ]
   },
   {
@@ -464,6 +466,7 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
+    "# MLIB API : http://spark.apache.org/docs/latest/mllib-collaborative-filtering.html#collaborative-filtering\n",
     "from pyspark.mllib.recommendation import ALS\n",
     "\n",
     "validationForPredictRDD = validationRDD.<FILL IN>\n",
@@ -474,15 +477,14 @@
     "ranks = [4, 8, 12]\n",
     "errors = [0, 0, 0]\n",
     "err = 0\n",
-    "tolerance = 0.03\n",
+    "\n",
     "\n",
     "minError = float('inf')\n",
     "bestRank = -1\n",
     "bestIteration = -1\n",
     "for rank in ranks:\n",
-    "    model = ALS.train(trainingRDD, rank, seed=seed, iterations=iterations,\n",
-    "                      lambda_=regularizationParameter)\n",
-    "    predictedRatingsRDD = model.predictAll(validationForPredictRDD)\n",
+    "    model = ALS.<FILL IN>\n",
+    "    predictedRatingsRDD = model.<FILL IN>\n",
     "    error = computeError(predictedRatingsRDD, validationRDD)\n",
     "    errors[err] = error\n",
     "    err += 1\n",
@@ -680,7 +682,10 @@
     "\n",
     "# Get an RDD with only the movies I did not rate Then run predictAll()\n",
     "MyUnratedMoviesRDD = (moviesRDD\n",
-    "                      .<FILL IN>)\n",
+    "                      .map(lambda (movieID, name): movieID)\n",
+    "                      .filter (lambda movieID:\n",
+    "                              movieID not in [mine [1] for mine in myRatedMovies])\n",
+    "                      .map(lambda movieID: (0, movieID)))\n",
     "                     \n",
     "predictedRDD = myRatingsModel.<FILL IN>"
    ]
@@ -727,9 +732,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Replace <FILL IN> with appropriate code\n",
     "# Use RDD transformations with predictedRDD and movieCountsRDD to yield an RDD with tuples of the form (Movie ID, (Predicted Rating, number of ratings))\n",
-    "predictedWithCountsRDD = ((predictedRDD.<FILL IN>))"
+    "predictedWithCountsRDD = ((predictedRDD.join(movieCountsRDD)))"
    ]
   },
   {
@@ -743,7 +747,10 @@
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "# Use RDD transformations with PredictedWithCountsRDD and moviesRDD to yield an RDD with tuples of the form (Predicted Rating, Movie Name, number of ratings), for movies with more than 75 ratings\n",
     "ratingsWithNamesRDD = (predictedWithCountsRDD\n",
-    "                        .<FILL IN>)"
+    "                       .join(moviesRDD)\n",
+    "                       .map (lambda (movie_id, ((pred, rating), name)):\n",
+    "                            (pred,name, rating))\n",
+    "                        .<FILL IN>"
    ]
   },
   {
